--- a/igcse.html
+++ b/igcse.html
@@ -279,8 +279,7 @@
   			},
 			//2 Feb
   			{
-    			"q": `The diagram shows two parallel lines intersecting two straight lines.
-				Find the values of a, b and c`,
+    			"q": "The diagram shows two parallel lines intersecting two straight lines.<br>Find the values of a, b and c",
     			"img": "images/feb_2.png",
     			"steps": [
       			"a = 143° (corresponding angles are equal).",
@@ -291,7 +290,7 @@
   			},
 			//3 Feb
   			{
-    			"q": "Jade invests €18000 at 5.25% per year compound interest.<br><br>Find the value of her investment at the end of 10 years.<br><br>Give your answer to the nearest ten thousand Euros.",
+    			"q": "Jade invests €18000 at 5.25% per year compound interest.<br>Find the value of her investment at the end of 10 years.<br>Give your answer to the nearest ten thousand Euros.",
     			"img": "",
     			"steps": [
       			"$18000(1 + \\frac{5.25}{100})^{10}$",
@@ -302,8 +301,7 @@
   			},
 			//4 Feb
   			{
-    			"q": `A regular polygon has an interior angle of 165°.
-				How many sides does it have?`,
+    			"q": "A regular polygon has an interior angle of 165°.<br>How many sides does it have?",
     			"img": "",
     			"steps": [
       			"$180° - 165° = 15°$", 
@@ -326,9 +324,7 @@
   			},
 			//6 Feb
   			{
-			    "q": `Consider the right angled triangle below:
-				a) Calculate the length of AB
-			 	b) Calculate the size of angle BAC`,
+			    "q": "Consider the right angled triangle below:<br>a) Calculate the length of AB<br>b) Calculate the size of angle BAC",
     			"img": "feb_6.png",
     			"steps": [
       			"a) AB $= \\sqrt{20^2 + 7^2}$",
@@ -339,11 +335,7 @@
   			},
 			//7 Feb
   			{
-    			"q": `Consider the Venn diagram below.  The number in the universal set is 50.
-				$n(A)=32, n(B)=28, n(A \\cup B)' = 8$.
-				Find:
-				a) $n(A \\cap B)$
-				b) $n(A' \\cap B)$`,
+    			"q": "Consider the Venn diagram below.<br>The number in the universal set is 50.<br>$n(A)=32, n(B)=28, n(A \\cup B)' = 8$.<br>Find:<br>a) $n(A \\cap B)$<br>b) $n(A' \\cap B)$",
     			"img": "feb_7.png",            
     			"steps": [
       			"a) $A \\cup B = 50 - 8 = 42$",
@@ -355,9 +347,7 @@
   			},
 			//8 Feb
 			{
-    			"q": `Peter invests £20000 for 10 years.
-				At the end of the period his investment is worth £35817 (nearest pound).
-				Calculate the interest rate.`,
+    			"q": "Peter invests £20000 for 10 years.<br>At the end of the period his investment is worth £35817 (nearest pound).<br>Calculate the interest rate.",
     			"img": "",
     			"steps": [
       			"$20000\\left(1+\\frac{r}{100}\\right)^{10} = 35817$",
@@ -370,9 +360,7 @@
   			},
 			//9 Feb
 			{
-    			"q": `$ y = sqrt[3]{\\left(\\frac{p^7}{q^2}\\right)}$
-				a) Find $y$ when $p = 9$ and $q=3$.
-				b) Rearrange the formula to make p the subject.`,
+    			"q": "$ y = sqrt[3]{\\left(\\frac{p^7}{q^2}\\right)}$<br>a) Find $y$ when $p = 9$ and $q=3$.<br>b) Rearrange the formula to make p the subject.",
     			"img": "",
     			"steps": [
 			    "a) $ y = sqrt[3]{\\left(\\frac{9^7}{3^2}\\right)}$",
@@ -386,8 +374,7 @@
   			},
 			//10 Feb
 			{
-    			"q": `The straight line $y=3x-1$ intersects the curve $y=2x^2-3x+2$ in two points.
-				Find the coordinates of the points of intersection giving your answer correct to 2dp.`,
+    			"q": "The straight line $y=3x-1$ intersects the curve $y=2x^2-3x+2$ in two points.<br>Find the coordinates of the points of intersection giving your answer correct to 2dp.",
    				"img": "",
     			"steps": [
       			"$2x^2-3x+2=3x-1$",
@@ -401,9 +388,7 @@
   			},
 			//11 Feb
 			{
-    			"q": `$ \\mathbf{a} = \\begin{pmatrix} 5 \\\\ -2 \\end{pmatrix}  $ \\quad $ \\mathbf{b} = \\begin{pmatrix} -7 \\\\ 9 \\end{pmatrix}  $
-				a) Find $\\mathbf{a}-3\\mathbf{b}$.
-				b) Find the exact value of $|\\mathbf{b}|$`,
+    			"q": "$ \\mathbf{a} = \\begin{pmatrix} 5 \\\\ -2 \\end{pmatrix}  $ \\quad $ \\mathbf{b} = \\begin{pmatrix} -7 \\\\ 9 \\end{pmatrix}$<br>a) Find $\\mathbf{a}-3\\mathbf{b}$.<br>b) Find the exact value of $|\\mathbf{b}|$",
     			"img": "",
     			"steps": [
       			"a) $ \\begin{pmatrix} 5 \\\\ -2 \\end{pmatrix}  - \\begin{pmatrix} -21 \\\\ 27 \\end{pmatrix} $",
@@ -414,9 +399,7 @@
   			},
 			//12 Feb
 			{
-    			"q": `The first four terms of a sequence are $ T_1=19,T_2=13, T_3=7, T_4=1 $
-				a) Find $T_5$
-				b) Find $T_n$.`,
+    			"q": "The first four terms of a sequence are:<br>$ T_1=19,T_2=13, T_3=7, T_4=1 $<br>a) Find $T_5$<br>b) Find $T_n$.",
     			"img": "",
     			"steps": [
       			"a) Common difference: $-6$",
@@ -438,9 +421,7 @@
   			},
 			//14 Feb
 			{
-    			"q": `The arithmetic mean of five numbers is $12$.
-				When a sixth number, $x$ is added the mean drops to $9$.
-				Find $x$.`,
+    			"q": "The arithmetic mean of five numbers is $12$.<br>When a sixth number, $x$ is added the mean drops to $9$.<br>Find $x$.",
     			"img": "",
     			"steps": [
       			"$\\frac{60+x}{6}=9$",
@@ -450,8 +431,7 @@
   			},
 			//15 Feb
 			{
-    			"q": `In the diagram, below, points A, B, C and D all lie on the circumference of a circle.
-				Giving reasons, write down the size of $\\angle BDA, \\angle BCD and \\angle ABD$.`,
+    			"q": "In the diagram, below, points A, B, C and D all lie on the circumference of a circle.<br>Giving reasons, write down the size of $\\angle BDA, \\angle BCD and \\angle ABD$.",
     			"img": "images/feb_15.png",
     			"steps": [
       			"$\\angle BDA = 26^\\circ$ (angle in the same segment as $\\angle BCA$)",
@@ -461,8 +441,7 @@
   			},
 			//16 Feb
 			{
-    			"q": `$f(x)=3^x$
-				Find $x$ when $f^{-1}(x)=4$`,
+    			"q": "$f(x)=3^x$<br>Find $x$ when $f^{-1}(x)=4$",
     			"img": "",
     			"steps": [
       			"$f^{-1}(x)=4\\Rightarrow f(4)=x$",
@@ -472,10 +451,7 @@
   			},
 			// 17 Feb
 			{
-    			"q": `The diagram shows the end view of a storage unit in the shape of two congruent trapeziums.
-				a) Calculate the area of the end wall.
-				b) The length of the sloping roof (marked $x$).
-				c) The angle of the pitch of the roof (marked $y^\\circ$).`,
+    			"q": "The diagram shows the end view of a storage unit in the shape of two congruent trapeziums.<br>a) Calculate the area of the end wall.<br>b) The length of the sloping roof (marked $x$).<br>c) The angle of the pitch of the roof (marked $y^\\circ$).",
     			"img": "images/feb_17.png",
     			"steps": [
       			"a) Area$=2\\times\\frac{1}{2}(a+b)\\times h$",
@@ -515,11 +491,7 @@
   			},
 			//20 Feb
 			{
-  				"q": `A cuboid is constructed to hold a single metal rod.
-				Its dimensions are length 6cm, width 4cm and height 2.5cm.
-				The rod fits exactly in the box without bending between the bottom left front corner and the top right back corner.
-				a) Calculate the length of the rod correct to 3 sf.
-				b) Calculate the angle the rod makes with the horizontal base of the cuboid correct to 1dp`,
+  				"q": "A cuboid is constructed to hold a single metal rod.<br>Its dimensions are length 6cm, width 4cm and height 2.5cm.<br>The rod fits exactly in the box without bending between the bottom left front corner and the top right back corner.<br>a) Calculate the length of the rod correct to 3 sf.<br>b) Calculate the angle the rod makes with the horizontal base of the cuboid correct to 1dp",
   				"img": "",
   				"steps": [
     			"a) Length of rod $= \\sqrt{6^2+4^2+2.5^2}$",
@@ -531,9 +503,7 @@
 			},
 			//21 Feb
 			{
-  				"q": `$y$ is inversely proportional to $\\sqrt{x+6}$.
-				When $y=100$, $x=10$.
-				Find $x$ when $y=40$`,
+  				"q": "$y$ is inversely proportional to $\\sqrt{x+6}$.<br>When $y=100$, $x=10$.<br>Find $x$ when $y=40$",
   				"img": "",
   				"steps": [
     			"$y \\propto \\frac{1}{\\sqrt{x+6}} \\Rightarrow y=\\frac{k}{\\sqrt{x+6}}$",
@@ -583,9 +553,7 @@
   			},
 			//25 Feb
 			{
-  				"q": `Solve the simultaneous equations:
-				$3x+7y=22$
-				$5x-3y=22$`,
+  				"q": "Solve the simultaneous equations:<br>$3x+7y=22$<br>$5x-3y=22$",
   				"img": "",
   				"steps": [
     			"Eq1: $3x+7y=22$, Eq2: $5x-3y=22$",
@@ -600,9 +568,7 @@
 
 			//26 Feb
 			{
-    			"q": `Consider the expressions:
-				$9a^2bc^2, 6a^4b^2c^4 \\text{and} 15a^6b^3c$
-				Write down a) the HCF, b) the LCM`,
+    			"q": "Consider the expressions:<br>$9a^2bc^2, 6a^4b^2c^4 \\text{and} 15a^6b^3c$<br>Write down:<br>a) the HCF<br>b) the LCM",
 			    "img": "",
     			"steps": [
       			"a) HCF $= 3a^2bc$",
@@ -622,8 +588,7 @@
 
 			//28 Feb
 			{
-  				"q": `Simplify
-				$\\frac{6x^2-7x-3}{9x^2-1}$`,
+  				"q": "Simplify<br>$\\frac{6x^2-7x-3}{9x^2-1}$",
   				"img": "",
   				"steps": [
     			"$6x^2-7x-3 = 6x^2-9x+2x-3$",
