--- a/igcse.html
+++ b/igcse.html
@@ -325,7 +325,7 @@
 			//6 Feb
   			{
 			    "q": "Consider the right angled triangle below:<br>a) Calculate the length of AB<br>b) Calculate the size of angle BAC",
-    			"img": "feb_6.png",
+    			"img": "images/feb_6.png",
     			"steps": [
       			"a) AB $= \\sqrt{20^2 + 7^2}$",
       			" $= \\sqrt{449} = 21.2$cm (3sf)",
@@ -336,7 +336,7 @@
 			//7 Feb
   			{
     			"q": "Consider the Venn diagram below.<br>The number in the universal set is 50.<br>$n(A)=32, n(B)=28, n(A \\cup B)' = 8$.<br>Find:<br>a) $n(A \\cap B)$<br>b) $n(A' \\cap B)$",
-    			"img": "feb_7.png",            
+    			"img": "images/feb_7.png",            
     			"steps": [
       			"a) $A \\cup B = 50 - 8 = 42$",
       			"$A \\cup B = A + B - A \\cap B$",
