--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             // FEB 8
             {
                 q: "Geometry: Exterior angle of a regular polygon is $18^\\circ$. How many sides does the polygon have?",
-                img: "exterior_angle.PNG",
+                img: "images/exterior_angle.PNG",
                 steps: ["Formula: Sum of exterior angles = $360^\\circ$.", "$n = 360 \\div 18$.", "Calculation.", "Final Answer: $$20 \\text{ sides}$$"]
             },
             // FEB 9
