--- a/igcse.html
+++ b/igcse.html
@@ -354,7 +354,7 @@
       			"$\\left(1+\\frac{r}{100}\\right)^{10} = \\frac{35817}{20000}$",
       			"$1+\\frac{r}{100} = \\left(\\frac{35817}{20000}\\right)^\\frac{1}{10}$",
       			"$\\frac{r}{100} = \\left(\\frac{35817}{20000}\\right)^\\frac{1}{10}-1$ ",
-      			"$r = 100[\\left(\\frac{35817}{20000}\\right)^\\frac{1}{10}-1]",
+      			"$r = 100[\\left(\\frac{35817}{20000}\\right)^\\frac{1}{10}-1]$",
       			"Final answer: $$6\\%$$"
     			]
   			},
