--- a/igcse.html
+++ b/igcse.html
@@ -360,7 +360,7 @@
   			},
 			//9 Feb
 			{
-    			"q": "$ y = sqrt[3]{\\left(\\frac{p^7}{q^2}\\right)}$<br>a) Find $y$ when $p = 9$ and $q=3$.<br>b) Rearrange the formula to make p the subject.",
+    			"q": "$y=sqrt[3]{\\left(\\frac{p^7}{q^2}\\right)}$<br>a) Find $y$ when $p = 9$ and $q=3$.<br>b) Rearrange the formula to make $p$ the subject.",
     			"img": "",
     			"steps": [
 			    "a) $ y = sqrt[3]{\\left(\\frac{9^7}{3^2}\\right)}$",
