--- a/igcse.html
+++ b/igcse.html
@@ -360,14 +360,14 @@
   			},
 			//9 Feb
 			{
-    			"q": "$y=sqrt[3]{\\left(\\frac{p^7}{q^2}\\right)}$<br>a) Find $y$ when $p = 9$ and $q=3$.<br>b) Rearrange the formula to make $p$ the subject.",
+    			"q": "$y=\\sqrt[3]{\\left(\\frac{p^7}{q^2}\\right)}$<br>a) Find $y$ when $p = 9$ and $q=3$.<br>b) Rearrange the formula to make $p$ the subject.",
     			"img": "",
     			"steps": [
 			    "a) $ y = \\sqrt[3]{\\left(\\frac{9^7}{3^2}\\right)}$",
       			"$ y = \\sqrt[3]{\\left(\\frac{9^7}{9}\\right)}$",
       			"$ y = \\sqrt[3]{9^6}$",
       			"$ y = 9^2 = 81$",
-      			"b) $y^3 = \\left(\\frac{p^7}{q^2}\\right)",
+      			"b) $y^3 = \\left(\\frac{p^7}{q^2}\\right)$",
       			"$ p^7 = q^2y^3$",
       			"$p = \\sqrt[7]{q^2y^3}$"
     			]
