--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             },
             // FEB 10
             {
-                q: "Reverse Percent: Sale Price £40 (20% off). Original Price?",
+                q: "An item is marked 20% Off! in a sale.  If the sale price is £40, what was the original price?",
                 steps: ["£40 is 80%.", "Divide by 0.8.", "$400 \\div 8 = 50$.", "Final Answer: $$£50$$"]
             },
             // FEB 11
