--- a/igcse.html
+++ b/igcse.html
@@ -383,7 +383,7 @@
       			"$x=\\frac{6+\\sqrt{12}}{4}$ or $x=\\frac{6-\\sqrt{12}}{4}$",
       			"$x=2.37$ or $x=0.63$",
       			"If $x=2.37, y=6.10$, if $x=0.63, y=0.90$",
-      			"Final answer: $(2.37,6.10), (0.63,0.90)"
+      			"Final answer: $$(2.37,6.10), (0.63,0.90)$$"
      			]
   			},
 			//11 Feb
@@ -394,7 +394,7 @@
       			"a) $ \\begin{pmatrix} 5 \\\\ -2 \\end{pmatrix}  - \\begin{pmatrix} -21 \\\\ 27 \\end{pmatrix} $",
       			"$ = \\begin{pmatrix} 26 \\\\ - 29 \\end{pmatrix} $",
       			"b) $\\sqrt{(-7)^2+9^2} = \\sqrt{49+81}$",
-      			"$ = \\sqrt{130}"
+      			"$ = \\sqrt{130}$"
     			]
   			},
 			//12 Feb
