--- a/igcse.html
+++ b/igcse.html
@@ -388,7 +388,7 @@
   			},
 			//11 Feb
 			{
-    			"q": "$ \\mathbf{a} = \\begin{pmatrix} 5 \\\\ -2 \\end{pmatrix}  $ \\quad $ \\mathbf{b} = \\begin{pmatrix} -7 \\\\ 9 \\end{pmatrix}$<br>a) Find $\\mathbf{a}-3\\mathbf{b}$.<br>b) Find the exact value of $|\\mathbf{b}|$",
+    			"q": "$ \\mathbf{a} = \\begin{pmatrix} 5 \\\\ -2 \\end{pmatrix}  $ and $ \\mathbf{b} = \\begin{pmatrix} -7 \\\\ 9 \\end{pmatrix}$<br>a) Find $\\mathbf{a}-3\\mathbf{b}$.<br>b) Find the exact value of $|\\mathbf{b}|$",
     			"img": "",
     			"steps": [
       			"a) $ \\begin{pmatrix} 5 \\\\ -2 \\end{pmatrix}  - \\begin{pmatrix} -21 \\\\ 27 \\end{pmatrix} $",
