--- a/igcse.html
+++ b/igcse.html
@@ -410,7 +410,7 @@
   			},
 			//13 Feb
 			{
-    			"q": "Find the value of \\Large$\\frac{3.6\times10^4}{1.8\\times10^{-3}}$\\normalsize giving your answer in standard form without using a calculator.",
+    			"q": "Find the value of $\\Large\\frac{3.6\times10^4}{1.8\\times10^{-3}}\\normalsize$ giving your answer in standard form without using a calculator.",
     			"img": "",
     			"steps": [
       			"$3.6 \div 1.8 =2$",
