--- a/igcse.html
+++ b/igcse.html
@@ -413,8 +413,8 @@
     			"q": "Find the value of $\\Large\\frac{3.6\\times10^4}{1.8\\times10^{-3}}\\normalsize$ giving your answer in standard form without using a calculator.",
     			"img": "",
     			"steps": [
-      			"$3.6 \div 1.8 =2$",
-      			"$10^4 \div 10^{-3} = 10^{4-(-3)}$",
+      			"$3.6 \\div 1.8 =2$",
+      			"$10^4 \\div 10^{-3} = 10^{4-(-3)}$",
       			"$ = 10^7$",
       			"Final answer:$$2\\times10^7$$"
     			]
