--- a/igcse.html
+++ b/igcse.html
@@ -431,7 +431,7 @@
   			},
 			//15 Feb
 			{
-    			"q": "In the diagram, below, points A, B, C and D all lie on the circumference of a circle.<br>Giving reasons, write down the size of $\\angle BDA, \\angle BCD and \\angle ABD$.",
+    			"q": "In the diagram, below, points A, B, C and D all lie on the circumference of a circle.<br>Giving reasons, write down the size of $\\angle BDA, \\angle BCD \\text{and} \\angle ABD$.",
     			"img": "images/feb_15.png",
     			"steps": [
       			"$\\angle BDA = 26^\\circ$ (angle in the same segment as $\\angle BCA$)",
