--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             // FEB 16
             {
                 q: "Arc Length: Sector angle $60^\\circ$, Radius 6cm.",
-                img: "arc_length.PNG",
+                img: "images/arc_length.PNG",
                 steps: ["Fraction: $\\frac{60}{360} = \\frac{1}{6}$.", "Circumference: $\\pi d = 12\\pi$.", "Calc: $\\frac{1}{6} \\times 12\\pi$.", "Final Answer: $$2\\pi$$"]
             },
             // FEB 17
