--- a/igcse.html
+++ b/igcse.html
@@ -461,7 +461,7 @@
       			"$=2.55\\text{m}$",
       			"c) $\\tan=\\frac{opp}{adj}$",
       			"$y=\\tan^{-1}\\left(\\frac{0.5}{2.5}\\right)$",
-      			"$=11.3^\\circ$ \\text{1dp}."
+      			"$=11.3^\\circ$ (1dp)."
     			]
   			},
 			// 18 Feb
