--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
     <!-- 1. SEO & BRANDING -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bradley's Maths | GCSE Higher Tier Resources</title>
+    <title>Bradley's Maths | GCSE & IGCSE Higher Tier Mathematics Resources</title>
     <meta name="description" content="Professional GCSE Higher Tier Mathematics resources. Prediction Papers and Worksheets for AQA 2026.">
-    
+    <!-- Open Graph Preview (Social Sharing) -->
+    <meta property="og:title" content="Bradley's Maths | GCSE & IGCSE Higher Tier Mathematics Resources">
+    <meta property="og:description" content="Structured Higher Tier Maths resources, including AQA 2026 Prediction Papers and daily exam-style questions.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bradleysmaths.com/">
+    <meta property="og:site_name" content="Bradley's Maths">
+    <meta property="og:image" content="https://bradleysmaths.co.uk/images/social-preview.png">
     <!-- 2. MATHJAX CONFIGURATION -->
     <script>
       window.MathJax = {
@@ -106,6 +112,12 @@
         h3 { font-size: 1.2rem; text-transform: uppercase; color: #a78bfa; margin-top: 40px; border-bottom: 1px solid #a78bfa; display: inline-block; padding-bottom: 5px; }
 
         .trust-badge { background-color: rgba(255,255,255,0.1); padding: 10px 20px; border-radius: 8px; margin-bottom: 30px; font-size: 0.9rem; color: #ddd6fe; display: inline-block; }
+        <div style="margin-top:30px; background:rgba(255,255,255,0.08); padding:25px; border-radius:12px;">
+    <h3 style="margin-top:0;">Why Bradley’s Maths?</h3>
+    <p>Every worksheet is built around syllabus-defined topic areas. 
+    Each begins with key concepts and worked examples, followed by graduated exam-style questions.</p>
+    <p>No filler. No random worksheets. Structured progression.</p>
+</div>
 
         /* BUTTONS */
         .btn-group { display: flex; gap: 15px; justify-content: center; flex-wrap: wrap; margin-bottom: 10px; }
@@ -192,9 +204,9 @@
         </div>
     </nav>
 
-    <div class="container">
+    <main class="container">
         <h1>Bradley's Maths</h1>
-        <h2>Professional GCSE Resources</h2>
+        <h2>Structured, Exam-Focused Higher Tier Mathematics</h2>
        <div class="trust-badge">Comprehensive Higher Tier Content • Aligned to AQA, Edexcel, OCR & WJEC</div>
 
         <!-- PROBLEM OF THE DAY WIDGET -->
@@ -213,7 +225,7 @@
             <!-- REPLACE '#' WITH YOUR PAYHIP LINKS BELOW -->
             <a href="https://payhip.com/b/x0OrH" class="btn btn-exam-a">Set A (£7.50)</a>
             <a href="https://payhip.com/b/CdRz2" class="btn btn-exam-b">Set B (£7.50)</a>
-            <a href="https://payhip.com/b/3ZTrU" class="btn btn-exam-c">Set C (7.50)</a>
+            <a href="https://payhip.com/b/3ZTrU" class="btn btn-exam-c">Set C (£7.50)</a>
         </div>
         <div style="margin-top: 10px;">
             <a href="https://payhip.com/b/9cP7i" class="btn btn-exam-bundle" style="width: 90%; max-width: 500px;">
@@ -243,7 +255,7 @@
                 <a href="https://www.youtube.com/@BradleysMaths" class="btn btn-youtube" style="font-size: 0.8rem; padding: 10px 20px;">YouTube Channel</a>
             </div>
         </div>
-    </div>
+    </main>
 
     <!-- JAVASCRIPT (Keep your existing script here) -->
     <script>
