--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="Bradley's Maths | GCSE & IGCSE Higher Tier Mathematics Resources">
     <meta property="og:description" content="Structured Higher Tier Maths resources, including AQA 2026 Prediction Papers and daily exam-style questions.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://bradleysmaths.com/">
+    <meta property="og:url" content="https://bradleysmaths.co.uk/">
     <meta property="og:site_name" content="Bradley's Maths">
     <meta property="og:image" content="https://bradleysmaths.co.uk/images/social-preview.png">
     <!-- 2. MATHJAX CONFIGURATION -->
@@ -113,10 +113,7 @@
 
         .trust-badge { background-color: rgba(255,255,255,0.1); padding: 10px 20px; border-radius: 8px; margin-bottom: 30px; font-size: 0.9rem; color: #ddd6fe; display: inline-block; }
         <div style="margin-top:30px; background:rgba(255,255,255,0.08); padding:25px; border-radius:12px;">
-    <h3 style="margin-top:0;">Why Bradley’s Maths?</h3>
-    <p>Every worksheet is built around syllabus-defined topic areas. 
-    Each begins with key concepts and worked examples, followed by graduated exam-style questions.</p>
-    <p>No filler. No random worksheets. Structured progression.</p>
+    
 </div>
 
         /* BUTTONS */
@@ -207,8 +204,13 @@
     <main class="container">
         <h1>Bradley's Maths</h1>
         <h2>Structured, Exam-Focused Higher Tier Mathematics</h2>
-       <div class="trust-badge">Comprehensive Higher Tier Content • Aligned to AQA, Edexcel, OCR & WJEC</div>
-
+        <div class="trust-badge">Comprehensive Higher Tier Content • Aligned to AQA, Edexcel, OCR & WJEC</div>
+        <div style="margin-top:30px; background:rgba(255,255,255,0.08); padding:25px; border-radius:12px;">
+            <h3 style="margin-top:0;">Why Bradley’s Maths?</h3>
+            <p>Every worksheet is built around syllabus-defined topic areas.
+            Each begins with key concepts and worked examples, followed by graduated exam-style questions.</p>
+            <p>No filler. No random worksheets. Structured progression.</p>
+        </div>
         <!-- PROBLEM OF THE DAY WIDGET -->
         <div class="daily-widget">
             <span class="widget-header">Problem of the Day | <span id="dateDisplay"></span></span>
