--- a/index.html
+++ b/index.html
@@ -211,6 +211,21 @@
             Each begins with key concepts and worked examples, followed by graduated exam-style questions.</p>
             <p>No filler. No random worksheets. Structured progression.</p>
         </div>
+        <!-- CALL TO ACTION BUTTON -->
+    <div style="margin-top:30px;">
+        <a href="/igcse" style="
+            display:inline-block;
+            background:#d62828;
+            color:white;
+            padding:14px 28px;
+            text-decoration:none;
+            border-radius:8px;
+            font-weight:bold;
+            font-size:1.1rem;">
+            View GCSE & IGCSE Resources
+        </a>
+    </div>
+
         <!-- PROBLEM OF THE DAY WIDGET -->
         <div class="daily-widget">
             <span class="widget-header">Problem of the Day | <span id="dateDisplay"></span></span>
