--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <div style="margin-top:30px;">
         <a href="/igcse" style="
             display:inline-block;
-            background:#d62828;
+            background:#4b2e83;
             color:white;
             padding:14px 28px;
             text-decoration:none;
