--- a/index.html
+++ b/index.html
@@ -212,19 +212,20 @@
             <p>No filler. No random worksheets. Structured progression.</p>
         </div>
         <!-- CALL TO ACTION BUTTON -->
-    <div style="margin-top:30px;">
-        <a href="/igcse" style="
-            display:inline-block;
-            background:#4b2e83;
-            color:white;
-            padding:14px 28px;
-            text-decoration:none;
-            border-radius:8px;
-            font-weight:bold;
-            font-size:1.1rem;">
-            View GCSE & IGCSE Resources
-        </a>
-    </div>
+  <div style="margin-top:30px; text-align:center;">
+    <a href="/igcse" style="
+        display:inline-block;
+        padding:14px 32px;
+        text-decoration:none;
+        border-radius:8px;
+        font-weight:bold;
+        font-size:1.1rem;
+        border:2px solid #4b2e83;
+        color:#4b2e83;
+        background:transparent;">
+        View GCSE & IGCSE Resources
+    </a>
+</div>
 
         <!-- PROBLEM OF THE DAY WIDGET -->
         <div class="daily-widget">
