--- a/index.html
+++ b/index.html
@@ -220,9 +220,8 @@
         border-radius:8px;
         font-weight:bold;
         font-size:1.1rem;
-        border:2px solid #4b2e83;
-        color:#4b2e83;
-        background:transparent;">
+        background:rgba(255,255,255,0.15);
+        color:white;">
         View GCSE & IGCSE Resources
     </a>
 </div>
