--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <p>No filler. No random worksheets. Structured progression.</p>
         </div>
         <!-- CALL TO ACTION BUTTON -->
-  <div style="margin-top:30px; text-align:center;">
+  <div style="margin:60px 0 40px 0; text-align:center;">
     <a href="/igcse" style="
         display:inline-block;
         padding:14px 32px;
