--- a/igcse.html
+++ b/igcse.html
@@ -518,7 +518,7 @@
 
 			//22 Feb
 			{
-    			"q": "Without using a calculator solve the equation $3+2\\sin x =4$ for $0^circ \\le x \\le 360^circ$",
+    			"q": "Without using a calculator solve the equation $3+2\\sin x =4$ for $0^\\circ \\le x \\le 360^\\circ$",
     			"img": "",
     			"steps": [
       			"$3+2\\sin x =4$",
